# guess-target

./: .gitignore  Cargo.toml  README.md  justfile  package.json
.github/workflows/: release.yml  test.yml
assets/: target.txt
scripts/: update-target.ts
src/: core.rs  lib.rs  main.rs  target.rs  wasm.rs
test/: index.test.ts
ts/: cli.ts  index.ts
ts/wasm/: index.d.ts  index.js
