[package]
name = "guess-target"
version = "0.1.5"
edition = "2024"
license = "MIT"
description = "guess-target"
repository = "https://github.com/ahaoboy/guess-target"
homepage = "https://github.com/ahaoboy/guess-target"
authors = ["ahaoboy"]
include = ["/src", "/Cargo.toml", "/README.md"]

[dependencies]
regex = { version = "1", default-features = false, features = [
  "unicode-case",
  "unicode-perl",
] }
wasm-bindgen = { version = "0.2", optional = true }
is-musl = { version = "0.1", git = "https://github.com/ahaoboy/is-musl" }
strum = "0.27"
strum_macros = "0.27"
serde = { version = "1", features = ["derive"], optional = true }
once_cell = "1"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
wasm = ["wasm-bindgen"]
serde = ["dep:serde"]

[[bin]]
name = "guess-target"

[profile.release]
debug = false
lto = true
strip = true
opt-level = 3
codegen-units = 1

[profile.bloaty]
debug = true
lto = false
strip = false
inherits = 'release'
